...
                                        <accessibility key="accessibilityConfiguration" identifier="showNibButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Nib Controller"/>
                                        <connections>
                                            <action selector="showNibController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KQh-0W-Thz"/>
...
                                        <accessibility key="accessibilityConfiguration" identifier="showTableViewButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Table Controller"/>
                                        <connections>
                                            <action selector="showTableViewController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="u6U-9d-UMi"/>
...
                                        <accessibility key="accessibilityConfiguration" identifier="loremIpsumButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Lorem Ipsum Controller"/>
                                        <connections>
                                            <segue destination="2jd-n4-Ihk" kind="show" id="wcP-y8-kPR"/>
...
                                        <accessibility key="accessibilityConfiguration" identifier="testNavigationTransactionButton"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                        <state key="normal" title="Load Image Controller"/>
                                        <connections>
                                            <segue destination="cay-7M-Gvd" kind="show" id="boD-GG-VVF"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Transactions" image="clock.fill" catalog="system" selectedImage="clock.fill" id="ypv-KA-BBe"/>
                    <navigationItem key="navigationItem" title="Sentry Test App (Swift)" id="Ddh-Ww-vzM"/>
                    <connections>
...
                                                                <rect key="frame" x="0.0" y="36" width="196.33333333333334" height="28"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                <state key="normal" title="Close SDK"/>
                                                                <connections>
                                                                    <action selector="close:" destination="VqS-l1-kwe" eventType="touchUpInside" id="UwB-2M-pCr"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Extra" image="ellipsis.circle.fill" catalog="system" selectedImage="ellipsis.circle.fill" id="e34-WA-EKV"/>
                    <connections>
                        <outlet property="anrFillingRunLoopButton" destination="2e4-48-rLl" id="MXb-mV-5SL"/>
...
