...
        if isFailed {
            return
        }

        let assetView = targetView ?? view

        assetView.message = success ? "ASSERT: SUCCESS" : "ASSERT: FAIL"
        assetView.errorMessage = success ? "" : errorMessage
        isFailed = !success

        if targetView != nil {
            return
        }
...
