...
                    <rect key="frame" x="132" y="431" width="150" height="44"/>
                    <accessibility key="accessibilityConfiguration" label="lonelyButton"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="wa2-1C-M44"/>
                        <constraint firstAttribute="width" constant="150" id="zeE-R7-gWo"/>
                    </constraints>
                    <state key="normal" title="a lonely button">
                        <color key="titleColor" systemColor="systemGreenColor"/>
                    </state>
                </button>
            </subviews>
            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
...
